change in style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu To Do</title>
+    <title>Seu To Do List</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,8 +16,11 @@
             <ul>
                 
             </ul>
-            <input type="text" id="write" placeholder="Digite uma tarefa">
-            <button id="button">Adicionar</button>
+            <section>
+              <input type="text" id="write" placeholder="Digite uma tarefa">
+                <button id="button">Adicionar</button>  
+            </section>
+            
         </div>
     </div>
 
